# Paraphrasis

./: .gitignore  .gitignore.swp  .gitmodules  3rd Party licenses.txt  CMakeLists.txt  LIB-LICENSES.rtf  LICENSE-GRAPHICS.txt  LICENSE.txt  Paraphrasis.jucer  README.md  README.txt  Template.pxm  astyle.options  crlf-big-check.sh  crlf-check.sh  setup-teragon-dependency-repositories.sh
Builds/LinuxMakefile/: Makefile
Builds/MacOSX/: Info-AU.plist  Info-VST3.plist  Info.plist
Builds/MacOSX/Paraphrasis.xcodeproj/: project.pbxproj
Builds/VisualStudio2013/: .gitignore
Components/: ImageKnob.cpp  ImageKnob.h  ImageSlider.cpp  ImageSlider.h  IndicatorLight.cpp  IndicatorLight.h  PushButton.h  ResourceCache.h  Resources.h  Sizes.h  TeragonGuiComponents.h  ThinButton.cpp  ThinButton.h  ToggleButton.h
Components/Plugin/: TeragonPluginBase.cpp  TeragonPluginBase.h
Components/Source/: AnimationConstants.h  EllipsizedLabel.h  ImageKnob.cpp  ImageKnob.h  ImageKnobLarge.h  ImageKnobSmall.h  ImageSlider.cpp  ImageSlider.h  IndicatorLight.cpp  IndicatorLight.h  ParameterLabel.h  PluginParameterComponent.h  PushButton.cpp  PushButton.h  ResourceCache.cpp  ResourceCache.h  Resources.h  StatusBar.cpp  StatusBar.h  TeragonGuiComponents.h  ThinButton.cpp  ThinButton.h  ToggleButton.h
Components/Tests/: .gitignore  ComponentTests.jucer  ResourceCacheTest.cpp
Components/Tests/JuceLibraryCode/: AppConfig.h  JuceHeader.h
Demo/: ComponentDemo.jucer
Demo/Builds/Linux/: Makefile
Demo/Builds/MacOSX/: Info.plist
Demo/Builds/VisualStudio2013/: ComponentDemo.vcxproj.filters
Demo/Graphics/: Component Demo.pxm
Demo/JuceLibraryCode/: AppConfig.h
Demo/Source/: Main.cpp  MainComponent.cpp  MainComponent.h  Resources.h
Doc/: manual.xcf
Install/: LICENSE.txt  LICENSES.txt  README.txt
Install/Mac/: Paraphrasis-multipleformats.pkgproj  Paraphrasis.pkgproj
Install/Win/: Paraphrasis.iss
JuceLibraryCode/: AppConfig.h  JuceHeader.h  JuceLV2Defines.h  JucePluginDefines.h
JuceLibraryCode/modules/dRowAudio/: juce_module_info
JuceLibraryCode/modules/juce_audio_basics/: juce_module_info
JuceLibraryCode/modules/juce_audio_devices/: juce_module_info
JuceLibraryCode/modules/juce_audio_formats/: juce_module_info
JuceLibraryCode/modules/juce_audio_plugin_client/: juce_module_info
LCDMaker/: AndroidManifest.xml
Loris/src/: Marker.h  Oscillator.C  RealtimeSynthesizer.C  RealtimeSynthesizer.h  Synthesizer.h  sse_mathfun.h
Models/: dft_test.py  phase_fix.py
PSDs/: LCD-1x.9.psd  LCD-singleline-2x.9.psd
PluginParameters.xcodeproj/: project.pbxproj
Resources/: Resources.cpp  Resources.h
Resources/Graphics/: button.knob  button.xcf  button_analyze.knob  button_analyze.xcf  button_select.knob  button_select.xcf  large_knob.knob  led.knob  license.txt  metal.xcf  slider_thumb.knob
Scripts/: stitch-knob
Source/: LorisSynthesiser.cpp  LorisSynthesiser.h  ParameterDefitions.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SampleAnalyzer.cpp  SampleAnalyzer.h
include/: BooleanParameter.h  ConcurrentParameterSet.h  DataParameter.h  DecibelParameter.h  Event.h  EventDispatcher.h  FloatParameter.h  FrequencyParameter.h  IntegerParameter.h  Parameter.h  PluginParameter.h  PluginParameterSet.h  PluginParameters.h  StringParameter.h  ThreadsafePluginParameterSet.h  VoidParameter.h  tinythread
source/: BooleanParameter.cpp  BooleanParameter.h  DecibelParameter.cpp  DecibelParameter.h  FloatingPointParameter.cpp  FloatingPointParameter.h  MapParameterSet.cpp  MapParameterSet.h  NamedParameter.h  NumericParameter.h  PluginParameter.h  PluginParameterSet.h  tinythread.cpp  tinythread.h
test/: BooleanParameterTest.cpp  CMakeLists.txt  MultithreadedTest.cpp  PluginParametersTest.cpp  TestRunner.h  main.cpp
(+148 files in other folders)
